[project]
name = "allyai-chatbot"
version = "0.1.0"
description = "AllyAI: WhatsApp-based relationship & confidence coach powered by GPT and Twilio."
authors = [
  { name="Lucy Stepanyan", email="lucystepanyan7@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
  "flask",
  "flask-cors",
  "twilio",
  "openai",
  "psycopg2-binary", # if using Postgres
]
